# python-fido2-webauthn-demo

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt  vercel.json
app/: server.py
app/static/js/: authenticate.mjs
app/templates/: base.html  index.html
